python/versioned_docs/version-1.17/api/class-locatorassertions.mdx
---
id: class-locatorassertions
title: "LocatorAssertions"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

The [LocatorAssertions] class provides assertion methods that can be used to make assertions about the [Locator] state in the tests. A new instance of [LocatorAssertions] is created by calling [playwright_assertions.expect(locator)](./api/class-playwrightassertions.mdx#playwright-assertions-assert-that-locator):


- [locator_assertions.not_to_be_checked(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-be-checked)
- [locator_assertions.not_to_be_disabled(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-be-disabled)
- [locator_assertions.not_to_be_editable(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-be-editable)
- [locator_assertions.not_to_be_empty(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-be-empty)
- [locator_assertions.not_to_be_enabled(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-be-enabled)
- [locator_assertions.not_to_be_focused(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-be-focused)
- [locator_assertions.not_to_be_hidden(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-be-hidden)
- [locator_assertions.not_to_be_visible(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-be-visible)
- [locator_assertions.not_to_contain_text(expected, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-contain-text)
- [locator_assertions.not_to_have_attribute(name, value, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-have-attribute)
- [locator_assertions.not_to_have_class(expected, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-have-class)
- [locator_assertions.not_to_have_count(count, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-have-count)
- [locator_assertions.not_to_have_css(name, value, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-have-css)
- [locator_assertions.not_to_have_id(id, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-have-id)
- [locator_assertions.not_to_have_js_property(name, value, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-have-js-property)
- [locator_assertions.not_to_have_text(expected, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-have-text)
- [locator_assertions.not_to_have_value(value, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-not-to-have-value)
- [locator_assertions.to_be_checked(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-checked)
- [locator_assertions.to_be_disabled(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-disabled)
- [locator_assertions.to_be_editable(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-editable)
- [locator_assertions.to_be_empty(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-empty)
- [locator_assertions.to_be_enabled(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-enabled)
- [locator_assertions.to_be_focused(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-focused)
- [locator_assertions.to_be_hidden(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-hidden)
- [locator_assertions.to_be_visible(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-visible)
- [locator_assertions.to_contain_text(expected, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-contain-text)
- [locator_assertions.to_have_attribute(name, value, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-attribute)
- [locator_assertions.to_have_class(expected, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-class)
- [locator_assertions.to_have_count(count, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-count)
- [locator_assertions.to_have_css(name, value, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-css)
- [locator_assertions.to_have_id(id, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-id)
- [locator_assertions.to_have_js_property(name, value, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-js-property)
- [locator_assertions.to_have_text(expected, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-text)
- [locator_assertions.to_have_value(value, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-value)

## locator_assertions.not_to_be_checked(**kwargs) {#locator-assertions-not-to-be-checked}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-checked-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-checked-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-checked-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-checked-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_be_checked(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-checked).

## locator_assertions.not_to_be_disabled(**kwargs) {#locator-assertions-not-to-be-disabled}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-disabled-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-disabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-disabled-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-disabled-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_be_disabled(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-disabled).

## locator_assertions.not_to_be_editable(**kwargs) {#locator-assertions-not-to-be-editable}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-editable-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-editable-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-editable-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-editable-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_be_editable(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-editable).

## locator_assertions.not_to_be_empty(**kwargs) {#locator-assertions-not-to-be-empty}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-empty-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-empty-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-empty-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-empty-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_be_empty(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-empty).

## locator_assertions.not_to_be_enabled(**kwargs) {#locator-assertions-not-to-be-enabled}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-enabled-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-enabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-enabled-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-enabled-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_be_enabled(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-enabled).

## locator_assertions.not_to_be_focused(**kwargs) {#locator-assertions-not-to-be-focused}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-focused-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-focused-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-focused-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-focused-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_be_focused(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-focused).

## locator_assertions.not_to_be_hidden(**kwargs) {#locator-assertions-not-to-be-hidden}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-hidden-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-hidden-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-hidden-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-hidden-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_be_hidden(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-hidden).

## locator_assertions.not_to_be_visible(**kwargs) {#locator-assertions-not-to-be-visible}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-visible-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-visible-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-visible-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-visible-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_be_visible(**kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-be-visible).

## locator_assertions.not_to_contain_text(expected, **kwargs) {#locator-assertions-not-to-contain-text}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-contain-text-option-expected"/> &#60;[str]|[Pattern]|[List]\[[str]\]|[List]\[[Pattern]\]&#62; Expected substring or RegExp or a list of those.<a href="#locator-assertions-not-to-contain-text-option-expected" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-contain-text-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-contain-text-option-timeout" class="list-anchor">#</a>
- `use_inner_text`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-contain-text-option-use-inner-text"/> &#60;[bool]&#62; Whether to use `element.innerText` instead of `element.textContent` when retrieving DOM node text.<a href="#locator-assertions-not-to-contain-text-option-use-inner-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-contain-text-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-contain-text-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_contain_text(expected, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-contain-text).

## locator_assertions.not_to_have_attribute(name, value, **kwargs) {#locator-assertions-not-to-have-attribute}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-attribute-option-name"/> &#60;[str]&#62; Attribute name.<a href="#locator-assertions-not-to-have-attribute-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-attribute-option-value"/> &#60;[str]|[Pattern]&#62; Expected attribute value.<a href="#locator-assertions-not-to-have-attribute-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-attribute-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-attribute-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-attribute-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-attribute-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_have_attribute(name, value, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-attribute).

## locator_assertions.not_to_have_class(expected, **kwargs) {#locator-assertions-not-to-have-class}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-class-option-expected"/> &#60;[str]|[Pattern]|[List]\[[str]\]|[List]\[[Pattern]\]&#62; Expected class or RegExp or a list of those.<a href="#locator-assertions-not-to-have-class-option-expected" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-class-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-class-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-class-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-class-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_have_class(expected, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-class).

## locator_assertions.not_to_have_count(count, **kwargs) {#locator-assertions-not-to-have-count}
- `count`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-count-option-count"/> &#60;[int]&#62; Expected count.<a href="#locator-assertions-not-to-have-count-option-count" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-count-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-count-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-count-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-count-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_have_count(count, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-count).

## locator_assertions.not_to_have_css(name, value, **kwargs) {#locator-assertions-not-to-have-css}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-css-option-name"/> &#60;[str]&#62; CSS property name.<a href="#locator-assertions-not-to-have-css-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-css-option-value"/> &#60;[str]|[Pattern]&#62; CSS property value.<a href="#locator-assertions-not-to-have-css-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-css-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-css-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-css-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-css-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_have_css(name, value, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-css).

## locator_assertions.not_to_have_id(id, **kwargs) {#locator-assertions-not-to-have-id}
- `id`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-id-option-id"/> &#60;[str]|[Pattern]&#62; Element id.<a href="#locator-assertions-not-to-have-id-option-id" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-id-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-id-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-id-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-id-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_have_id(id, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-id).

## locator_assertions.not_to_have_js_property(name, value, **kwargs) {#locator-assertions-not-to-have-js-property}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-js-property-option-name"/> &#60;[str]&#62; Property name.<a href="#locator-assertions-not-to-have-js-property-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-js-property-option-value"/> &#60;[Serializable]&#62; Property value.<a href="#locator-assertions-not-to-have-js-property-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-js-property-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-js-property-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-js-property-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-js-property-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_have_js_property(name, value, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-js-property).

## locator_assertions.not_to_have_text(expected, **kwargs) {#locator-assertions-not-to-have-text}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-text-option-expected"/> &#60;[str]|[Pattern]|[List]\[[str]\]|[List]\[[Pattern]\]&#62; Expected substring or RegExp or a list of those.<a href="#locator-assertions-not-to-have-text-option-expected" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-text-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-text-option-timeout" class="list-anchor">#</a>
- `use_inner_text`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-text-option-use-inner-text"/> &#60;[bool]&#62; Whether to use `element.innerText` instead of `element.textContent` when retrieving DOM node text.<a href="#locator-assertions-not-to-have-text-option-use-inner-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-text-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-text-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_have_text(expected, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-text).

## locator_assertions.not_to_have_value(value, **kwargs) {#locator-assertions-not-to-have-value}
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-value-option-value"/> &#60;[str]|[Pattern]&#62; Expected value.<a href="#locator-assertions-not-to-have-value-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-value-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-value-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-value-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-value-return" class="list-anchor">#</a>

The opposite of [locator_assertions.to_have_value(value, **kwargs)](./api/class-locatorassertions.mdx#locator-assertions-to-have-value).

## locator_assertions.to_be_checked(**kwargs) {#locator-assertions-to-be-checked}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-checked-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-checked-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-checked-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-checked-return" class="list-anchor">#</a>

Ensures the [Locator] points to a checked input.

## locator_assertions.to_be_disabled(**kwargs) {#locator-assertions-to-be-disabled}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-disabled-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-disabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-disabled-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-disabled-return" class="list-anchor">#</a>

Ensures the [Locator] points to a disabled element.

## locator_assertions.to_be_editable(**kwargs) {#locator-assertions-to-be-editable}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-editable-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-editable-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-editable-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-editable-return" class="list-anchor">#</a>

Ensures the [Locator] points to an editable element.

## locator_assertions.to_be_empty(**kwargs) {#locator-assertions-to-be-empty}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-empty-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-empty-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-empty-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-empty-return" class="list-anchor">#</a>

Ensures the [Locator] points to an empty editable element or to a DOM node that has no text.

## locator_assertions.to_be_enabled(**kwargs) {#locator-assertions-to-be-enabled}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-enabled-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-enabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-enabled-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-enabled-return" class="list-anchor">#</a>

Ensures the [Locator] points to an enabled element.

## locator_assertions.to_be_focused(**kwargs) {#locator-assertions-to-be-focused}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-focused-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-focused-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-focused-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-focused-return" class="list-anchor">#</a>

Ensures the [Locator] points to a focused DOM node.

## locator_assertions.to_be_hidden(**kwargs) {#locator-assertions-to-be-hidden}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-hidden-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-hidden-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-hidden-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-hidden-return" class="list-anchor">#</a>

Ensures the [Locator] points to a hidden DOM node, which is the opposite of [visible](./actionability.mdx#visible).

## locator_assertions.to_be_visible(**kwargs) {#locator-assertions-to-be-visible}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-visible-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-visible-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-visible-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-visible-return" class="list-anchor">#</a>

Ensures the [Locator] points to a [visible](./actionability.mdx#visible) DOM node.

## locator_assertions.to_contain_text(expected, **kwargs) {#locator-assertions-to-contain-text}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-contain-text-option-expected"/> &#60;[str]|[Pattern]|[List]\[[str]\]|[List]\[[Pattern]\]&#62; Expected substring or RegExp or a list of those.<a href="#locator-assertions-to-contain-text-option-expected" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-contain-text-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-contain-text-option-timeout" class="list-anchor">#</a>
- `use_inner_text`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-contain-text-option-use-inner-text"/> &#60;[bool]&#62; Whether to use `element.innerText` instead of `element.textContent` when retrieving DOM node text.<a href="#locator-assertions-to-contain-text-option-use-inner-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-contain-text-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-contain-text-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element that contains the given text. You can use regular expressions for the value as well.

Note that if array is passed as an expected value, entire lists can be asserted:

## locator_assertions.to_have_attribute(name, value, **kwargs) {#locator-assertions-to-have-attribute}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-attribute-option-name"/> &#60;[str]&#62; Attribute name.<a href="#locator-assertions-to-have-attribute-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-attribute-option-value"/> &#60;[str]|[Pattern]&#62; Expected attribute value.<a href="#locator-assertions-to-have-attribute-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-attribute-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-attribute-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-attribute-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-attribute-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with given attribute.

## locator_assertions.to_have_class(expected, **kwargs) {#locator-assertions-to-have-class}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-class-option-expected"/> &#60;[str]|[Pattern]|[List]\[[str]\]|[List]\[[Pattern]\]&#62; Expected class or RegExp or a list of those.<a href="#locator-assertions-to-have-class-option-expected" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-class-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-class-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-class-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-class-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with given CSS class.

Note that if array is passed as an expected value, entire lists can be asserted:

## locator_assertions.to_have_count(count, **kwargs) {#locator-assertions-to-have-count}
- `count`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-count-option-count"/> &#60;[int]&#62; Expected count.<a href="#locator-assertions-to-have-count-option-count" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-count-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-count-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-count-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-count-return" class="list-anchor">#</a>

Ensures the [Locator] resolves to an exact number of DOM nodes.

## locator_assertions.to_have_css(name, value, **kwargs) {#locator-assertions-to-have-css}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-css-option-name"/> &#60;[str]&#62; CSS property name.<a href="#locator-assertions-to-have-css-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-css-option-value"/> &#60;[str]|[Pattern]&#62; CSS property value.<a href="#locator-assertions-to-have-css-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-css-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-css-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-css-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-css-return" class="list-anchor">#</a>

Ensures the [Locator] resolves to an element with the given computed CSS style.

## locator_assertions.to_have_id(id, **kwargs) {#locator-assertions-to-have-id}
- `id`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-id-option-id"/> &#60;[str]|[Pattern]&#62; Element id.<a href="#locator-assertions-to-have-id-option-id" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-id-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-id-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-id-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-id-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with the given DOM Node ID.

## locator_assertions.to_have_js_property(name, value, **kwargs) {#locator-assertions-to-have-js-property}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-js-property-option-name"/> &#60;[str]&#62; Property name.<a href="#locator-assertions-to-have-js-property-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-js-property-option-value"/> &#60;[Serializable]&#62; Property value.<a href="#locator-assertions-to-have-js-property-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-js-property-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-js-property-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-js-property-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-js-property-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with given JavaScript property. Note that this property can be of a primitive type as well as a plain serializable JavaScript object.

## locator_assertions.to_have_text(expected, **kwargs) {#locator-assertions-to-have-text}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-text-option-expected"/> &#60;[str]|[Pattern]|[List]\[[str]\]|[List]\[[Pattern]\]&#62; Expected substring or RegExp or a list of those.<a href="#locator-assertions-to-have-text-option-expected" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-text-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-text-option-timeout" class="list-anchor">#</a>
- `use_inner_text`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-text-option-use-inner-text"/> &#60;[bool]&#62; Whether to use `element.innerText` instead of `element.textContent` when retrieving DOM node text.<a href="#locator-assertions-to-have-text-option-use-inner-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-text-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-text-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with the given text. You can use regular expressions for the value as well.

Note that if array is passed as an expected value, entire lists can be asserted:

## locator_assertions.to_have_value(value, **kwargs) {#locator-assertions-to-have-value}
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-value-option-value"/> &#60;[str]|[Pattern]&#62; Expected value.<a href="#locator-assertions-to-have-value-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-value-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-value-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-value-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-value-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with the given input value. You can use regular expressions for the value as well.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./api/class-locatorassertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./api/class-pageassertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./api/class-playwrightassertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
